<resources>
    <string name="app_name">AulaAndroid-Volley</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="entrar_jsonobjectrequest">Entrar - JsonObjectRequest</string>
    <string name="entrar_jsonarrayrequest">Entrar - JsonArrayRequest</string>
    <string name="entrar_stringrequest">Entrar - StringRequest</string>
    <string name="exemplo_de_uso_do_volley">Exemplo de uso do Volley</string>
    <string name="email">*Email</string>
    <string name="password">*Password</string>
</resources>
